# alia

./: .gitignore  Cargo.toml  README.md  flake.nix  home.nix
kcx/: main.lia  util.lia
src/: lsp.rs  main.rs
src/compiler/: error.rs  mod.rs  tests.lia  tests.rs
src/disasm/: mod.rs
src/lsp/: action.rs  goto.rs  hover.rs  mod.rs
src/parser/: ast.rs  document.rs  error.rs  lexer.re  lexer.rs  loc.rs  mod.rs  node.rs
src/parser/tests/: mod.rs  simple.lia
src/repl/: editor.rs  mod.rs
src/vm/: builtins.rs  interns.rs  mark.rs  mod.rs  module.rs  ops.rs  proc.rs  val.rs
