[package]
name = "alia"
version = "0.1.0"
edition = "2021"

[features]
default = ["lsp"]
lsp = ["dep:lsp-server", "dep:lsp-types", "dep:serde", "dep:serde_json"]

[dependencies]
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.95", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
