[package]
name = "alia"
version = "0.1.0"
edition = "2021"

[features]
default = ["lsp", "repl"]
lsp = ["dep:lsp-server", "dep:lsp-types", "dep:lsp-textdocument", "dep:serde", "dep:serde_json"]
repl = ["dep:rustyline"]

[dependencies]
num-traits = "0.2"
num-derive = "0.4"

lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.95", optional = true }
lsp-textdocument = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

rustyline = { version = "13", optional = true }
